--- a/5post-pilates.html
+++ b/5post-pilates.html
@@ -94,7 +94,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Sport</a></h1>
+					<h1 id="fh5co-logo"><a href="Sport.html">Sport</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -123,43 +123,6 @@
 
 
 
-<!--</div>
-		<div id="content">
-		  <div class="home">
-		    <div class="aside">
-		      <h1>Ingrediente</h1>
-		      <p>175gr ciocolata neagra</p>
-		      <p>150gr unt</p>
-		      <p>200gr zahar</p>
-					<p>35gr cacao pudra</p>
-					<p>7 oua</p>
-					<p>forma de copt ⌀ 25cm</p>
-		    </div>
-		    <div class="section">
-		      <div>
-		        <h2>Preparare</h2>
-		        <p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-		      </div>
-		      <ul>
-		      <li class="first"> <a href="#"><img src="images/torto_cioco1.jpg" alt=""></a> </li>
-		        <li class="first"> <a href="#"><img src="images/tort_cioco2.jpg" alt=""></a> </li>
-		        <li> <a href="#"><img src="images/torto_cioco3.jpg" alt=""></a> </li>
-		      </ul>
-		    </div>
-		  </div>
-		</div> -->
-		<!--<div class="row">
-			<div class="column">
-				<img src="images/tort_cioco1.jpg" alt=Etapa1 style="width:100%">
-			</div>
-			<div class="column">
-				<img src="images/tort_cioco2.jpg" alt="Etapa2" style="width:100%">
-			</div>
-			<div class="column">
-				<img src="images/tort_cioco3.jpg" alt="Etapa3" style="width:100%">
-			</div>
-		</div>
--->
 
 <div id="fh5co-feature-product" > <!--class="fh5co-section-gray">-->
 	<div class="container">
@@ -207,37 +170,22 @@
 
 				</div>
 		</div>
-			<!--<div class="col-md-4"> -->
-		<!--		<div class="feature-text">
-					<h3>Preparare</h3>
-					<p>Preîncalziți cuptorul la 180 de grade Celsius.</p>
-					<p>For the cake, place all of the cake ingredients, except the boiling water, into a large mixing bowl. Using a wooden spoon, or electric whisk, beat the mixture until smooth and well combined. </p>
-					<p>Add the boiling water to the mixture, a little at a time, until smooth. (The cake mixture will now be very liquid.) </p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna </p>
-					<p> aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip </p>
 
-				</div>
-			</div> -->
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Django Python</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-		</div> -->
 
 
 	</div>
 </div>
 
 
+<div class="row">
+	<div class="col-md-4 col-md-offset-4 text-center animate-box">
+		<a href="blogsport.html" class="btn btn-primary btn-lg">Vezi articolele sportive</a>
+	</div>
+</div>
+
 
 <h3></h3>
- <!--poza vine pe mijloc
-<div class="middlephoto">
-	<img src="images/tort_cioco.jpg" height="500" width="900">
-</div>
--->
+
 <h3></h3>
 <h3></h3>
 
@@ -290,7 +238,7 @@
 							<div class="clearfix visible-sm-block"></div>
 							<div class="col-lg-4 col-md-4 col-sm-6">
 								<div class="fh5co-blog animate-box">
-									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
+									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 									<div class="blog-text">
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
@@ -306,11 +254,6 @@
 						</div>
 
 
-					<!--	<div class="row">
-							<div class="col-md-4 col-md-offset-4 text-center animate-box">
-								<a href="#" class="btn btn-primary btn-lg">Our Blog</a>
-							</div>
-						</div> -->
 
 					</div>
 				</div>
