--- a/2post-beneficiile-alergarii.html
+++ b/2post-beneficiile-alergarii.html
@@ -96,7 +96,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Sport</a></h1>
+					<h1 id="fh5co-logo"><a href="Sport.html">Sport</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -206,6 +206,12 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4 text-center animate-box">
+					<a href="blogsport.html" class="btn btn-primary btn-lg">Vezi articolele sportive</a>
+				</div>
+			</div>
+
 
 		<!--	<div class="col-md-4">
 				<div class="feature-text">
@@ -230,7 +236,7 @@
 <h3></h3>
 <h3></h3>
 
-
+<p></p>
 				<div id="fh5co-blog-section">
 					<div class="container">
 						<div class="row">
@@ -276,7 +282,7 @@
 							<div class="clearfix visible-sm-block"></div>
 							<div class="col-lg-4 col-md-4 col-sm-6">
 								<div class="fh5co-blog animate-box">
-									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
+									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 									<div class="blog-text">
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
