--- a/4post-lupta-impotriva-depresiei.html
+++ b/4post-lupta-impotriva-depresiei.html
@@ -13,19 +13,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -94,7 +81,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Sport</a></h1>
+					<h1 id="fh5co-logo"><a href="Sport.html">Sport</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -136,7 +123,7 @@
 
 		<div class="row row-bottom-padded-md">
 			<div class="col-md-12 text-center animate-box">
-				<p><img src="images/depresiesport.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+				<p><img src="images/swimming.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 			</div>
 
 		</div>
@@ -158,37 +145,22 @@
 
 				</div>
 		</div>
-			<!--<div class="col-md-4"> -->
-		<!--		<div class="feature-text">
-					<h3>Preparare</h3>
-					<p>Preîncalziți cuptorul la 180 de grade Celsius.</p>
-					<p>For the cake, place all of the cake ingredients, except the boiling water, into a large mixing bowl. Using a wooden spoon, or electric whisk, beat the mixture until smooth and well combined. </p>
-					<p>Add the boiling water to the mixture, a little at a time, until smooth. (The cake mixture will now be very liquid.) </p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna </p>
-					<p> aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip </p>
 
-				</div>
-			</div> -->
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Django Python</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-		</div> -->
 
 
 	</div>
 </div>
 
 
+<div class="row">
+	<div class="col-md-4 col-md-offset-4 text-center animate-box">
+		<a href="blogsport.html" class="btn btn-primary btn-lg">Vezi articolele sportive</a>
+	</div>
+</div>
+
 
 <h3></h3>
- <!--poza vine pe mijloc
-<div class="middlephoto">
-	<img src="images/tort_cioco.jpg" height="500" width="900">
-</div>
--->
+
 <h3></h3>
 <h3></h3>
 
@@ -241,7 +213,7 @@
 							<div class="clearfix visible-sm-block"></div>
 							<div class="col-lg-4 col-md-4 col-sm-6">
 								<div class="fh5co-blog animate-box">
-									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
+									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 									<div class="blog-text">
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
