--- a/7post-mancarea-campionilor.html
+++ b/7post-mancarea-campionilor.html
@@ -91,7 +91,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Sport</a></h1>
+					<h1 id="fh5co-logo"><a href="Sport.html">Sport</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -241,7 +241,13 @@
 </div>
 
 
+<div class="row">
+	<div class="col-md-4 col-md-offset-4 text-center animate-box">
+		<a href="blogsport.html" class="btn btn-primary btn-lg">Vezi articolele sportive</a>
+	</div>
+</div>
 
+<h3></h3>
 
 
 				<div id="fh5co-blog-section">
@@ -292,7 +298,7 @@
 							<div class="clearfix visible-sm-block"></div>
 							<div class="col-lg-4 col-md-4 col-sm-6">
 								<div class="fh5co-blog animate-box">
-									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
+									<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 									<div class="blog-text">
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
