--- a/Casa-ta.html
+++ b/Casa-ta.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="Bucatarie.html">Casa ta</a></h1>
+					<h1 id="fh5co-logo"><a href="blogcasata.html">Casa ta</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -192,11 +192,11 @@
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/blog-1.jpg);">
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image:  url(images/hol.jpg);">
 								<a href="#" class="color-4">
 									<div class="case-studies-summary">
 										<span>Amenajari</span>
-										<h2>Bucatarie cu stil</h2>
+										<h2>Hol cu stil</h2>
 									</div>
 								</a>
 							</li>
@@ -284,7 +284,7 @@
 	 				<div class="clearfix visible-sm-block"></div>
 	 				<div class="col-lg-4 col-md-4 col-sm-6">
 	 					<div class="fh5co-blog animate-box">
-							<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc2.jpg" alt=""></a>
+							<a href="6post-propria-ta-gradina.html"><img class="img-responsive" src="images/grbuc6.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
