--- a/bloggradina.html
+++ b/bloggradina.html
@@ -71,27 +71,22 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/gardening1.jpg);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/rosii.jpg);">
 				<div class="desc animate-box">
-					<div class="container">
-						<div class="col-md-10 col-md-offset-1">
-				<!--			<a href="index.html" id="main-logo">Module</a>
-							<div class="animate-box">
-								<h2>Our Blog</h2>
-								<p>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></p> -->
+					<h2>Hai pe-afara!</h2>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-		</div>
+
 
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Gradina</a></h1>
+					<h1 id="fh5co-logo"><a href="Gradina.html">Gradina</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -133,23 +128,36 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="1post-tort-ciocolata.html"><img class="img-responsive" src="images/tort_cioco.jpg" alt=""></a>
+							<a href="5post-pilates.html"><img class="img-responsive" src="images/strawberries.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Tort de Ciocolata</a></h3>
-									<span class="posted_by">Ianuarie 12</span>
-									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
-									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
-									<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
+									<h3><a href=""#>Cele mai dulci fructe</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Nu ai nevoie de un abonament la sala pentru a fi in forma. Niste muzica si o camera aerisita sunt de ajuns!</p>
+									<p><a href="5post-pilates.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
+							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/gazon.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Cand plantam gazonul?</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
+									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/daunator.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Daunatorii</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -157,14 +165,42 @@
 								</div>
 							</div>
 						</div>
+
+						<!--2222222-->
+
 
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
+							<a href="2post-beneficiile-alergarii.html"><img class="img-responsive" src="images/grbuc12.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Gradina in bucatarie</a></h3>
+									<span class="posted_by">Ianuarie 12</span>
+									<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+									<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
+									<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/cactus.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Ingrijirea cactusilor</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Afla ce mancare te ajuta sa fii in forma!Pentru ca un plan alimentar sa fie unul de succes, stim cu totii ca avem nevoie de cele mai bune retete.</p>
+									<p><a href="#">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/springveg.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Legume de primavara</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -173,27 +209,29 @@
 							</div>
 						</div>
 
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
+						<!--333333333-->
 
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
+							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/flori.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>Flori pentru casa</a></h3>
+									<span class="posted_by">Sep. 15th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Activitatile fizice ofera foarte multe beneficii sanatatii si starii tale de spirit. Traieste mai mult, traieste mai bine!</p>
+									<p><a href="4-post-lupta-impotriva-depresiei.html">Vezi mai mult...</a></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/flowerplant.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Plantarea florilor in gradina</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -203,10 +241,10 @@
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/brad.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
+									<h3><a href=""#>De unde vine bradul de Craciun?</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -214,6 +252,7 @@
 								</div>
 							</div>
 						</div>
+
 					</div>
 					<div class="clearfix visible-md-block"></div>
 				</div>
@@ -225,97 +264,7 @@
 
 
 		<div id="fh5co-blog-section" >
-			<div class="container">
-				<div class="row">
-			</div>
-			<div class="container">
-				<div class="row row-bottom-padded-md">
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
 
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-lg-4 col-md-4 col-sm-6">
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-
-						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-							<div class="blog-text">
-								<div class="prod-title">
-									<h3><a href=""#>Web Design for the Future</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix visible-md-block"></div>
-				</div>
 
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 text-center animate-box">
@@ -325,7 +274,7 @@
 
 
 			</div>
-		</div>
+
 
 
 
