--- a/blogsport.html
+++ b/blogsport.html
@@ -73,25 +73,20 @@
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/football.jpg);">
 				<div class="desc animate-box">
-					<div class="container">
-						<div class="col-md-10 col-md-offset-1">
-				<!--			<a href="index.html" id="main-logo">Module</a>
-							<div class="animate-box">
-								<h2>Our Blog</h2>
-								<p>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></p> -->
+					<h2>Shake it!</h2>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-		</div>
+
 
 		<header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Sport</a></h1>
+					<h1 id="fh5co-logo"><a href="Sport.html">Sport</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -146,7 +141,7 @@
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/morningrun1.jpg" alt=""></a>
+							<a href="4-post-lupta-impotriva-depresiei.html"><img class="img-responsive" src="images/morningrun3.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Rutina de dimineata</a></h3>
@@ -171,7 +166,7 @@
 							</div>
 						</div>
 
-
+						<!--22222222-->
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
@@ -200,10 +195,10 @@
 							</div>
 						</div>
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/footballfamily.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/horseride.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Tehnici de baschet</a></h3>
+									<h3><a href=""#>Calaritul</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -212,7 +207,7 @@
 							</div>
 						</div>
 
-
+							<!--3333333-->
 
 					</div>
 					<div class="clearfix visible-sm-block"></div>
@@ -231,7 +226,7 @@
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/footballfamily.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/ski1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Tehnici de baschet</a></h3>
@@ -244,10 +239,10 @@
 						</div>
 
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/footballfamily.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="images/gymplaylist.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Tehnici de baschet</a></h3>
+									<h3><a href=""#>Playlist pentru sala</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
